syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

package runtime.common;

option (scalapb.options) = {
  package_name: "runtime.common"
  import: "runtime.common.TypeMappers._"

  // All classes that extend a sealed trait need to be in the same Scala
  // file, so we set single_file to true.
  single_file: true
  preamble: "sealed trait AllocateResponse"
  preamble: "sealed trait SlotRequestResp"
};

// Traits

// SlotState

enum SlotState {
    FREE = 0;
    ALLOCATED = 1;
}

// SlotRequestResp

message NoSlotsAvailable {
    option (scalapb.message).extends = "SlotRequestResp";
}

message NoTaskManagerAvailable {
    option (scalapb.message).extends = "SlotRequestResp";
}

message Unexpected {
    option (scalapb.message).extends = "SlotRequestResp";
}

//case class SlotAvailable(taskSlot: Seq[TaskSlot], addr: Address) extends SlotRequestResp with NetMsg
message SlotAvailable {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    option (scalapb.message).extends = "SlotRequestResp";
    repeated TaskSlot taskSlot = 1;
    AddressProto addr = 2 [(scalapb.field).no_box = true];
}


//Represents a Remote ActorRef
message ActorRefProto {
    string path = 1;
}

message AddressProto {
    string system = 1;
    string hostname = 2;
    uint32 port = 3;
    string protocol = 4 [(scalapb.field).no_box = false];
}

message InetProto {
    string ip = 1;
    int32 port = 2;
}

//case object TaskManagerInit extends NetMsg
message TaskManagerInit {
    option (scalapb.message).extends = "runtime.common.NetMsg";
}


//case class WeldTask(expr: String, vec: String, result: Option[String] = None) extends NetMsg
message WeldTask {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    string expr = 1;
    string vec = 2;
    google.protobuf.StringValue result = 3; // To make it an Option
}

//case class WeldJob(tasks: Seq[WeldTask]) extends NetMsg
message WeldJob {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    repeated WeldTask tasks = 1;
}

//case class WeldTaskCompleted(task: WeldTask) extends NetMsg
message WeldTaskCompleted {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    WeldTask task = 1 [(scalapb.field).no_box = true];
}

//case class ArcProfile(cpuCores: Double, memoryInMB: Long) extends NetMsg {
//def matches(other: ArcProfile): Boolean =
//this.cpuCores >= other.cpuCores && this.memoryInMB >= other.memoryInMB
//}
message ArcProfile {
    option (scalapb.message).extends = "runtime.common.ProfileMatcher";
    option (scalapb.message).extends = "runtime.common.NetMsg";
    double cpuCores = 1;
    int64 memoryInMb = 2; // Long
}

//case class ArcJob(id: String, profile: ArcProfile, job: WeldJob, masterRef: Option[AppMasterRef] = None)
//extends NetMsg
message ArcJob {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    string id = 1;
    ArcProfile profile = 2 [(scalapb.field).no_box = true]; // Not Option[]
    WeldJob job = 3 [(scalapb.field).no_box = true]; // Not Option[]
    ActorRefProto ref = 4;
}

// TaskMaster related

//case object TaskMasterHeartBeat extends NetMsg
message TaskMasterHeartBeat {
    option (scalapb.message).extends = "runtime.common.NetMsg";
}

//case object TaskMasterFailure extends NetMsg
message TaskMasterFailure {
    option (scalapb.message).extends = "runtime.common.NetMsg";
}

//case class TaskTransferConn(inet: InetSocketAddress) extends NetMsg
message TaskTransferConn {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    InetProto inet = 1 [(scalapb.field).no_box = true];
}

//case class TaskTransferAck(inet: InetSocketAddress) extends Event with NetMsg
message TaskTransferAck {
    option (scalapb.message).extends = "akka.io.Tcp.Event";
    option (scalapb.message).extends = "runtime.common.NetMsg";
    InetProto inet = 1 [(scalapb.field).no_box = true];
}

//case object TaskTransferError extends NetMsg
message TaskTransferError{
    option (scalapb.message).extends = "runtime.common.NetMsg";
}

//case class TaskTransferComplete(inet: InetSocketAddress) extends NetMsg
message TaskTransferComplete{
    option (scalapb.message).extends = "runtime.common.NetMsg";
    InetProto inet = 1 [(scalapb.field).no_box = true];
}

//case object TasksCompiled extends NetMsg
message TasksCompiled {
    option (scalapb.message).extends = "runtime.common.NetMsg";
}


// TaskManager related

//case class AllocateSuccess(job: ArcJob, ref: ActorRef) extends AllocateResponse with NetMsg
message AllocateSuccess {
    option (scalapb.message).extends = "AllocateResponse";
    option (scalapb.message).extends = "runtime.common.NetMsg";
    ArcJob job = 1 [(scalapb.field).no_box = true]; // Not Option[]
    ActorRefProto ref = 2 [(scalapb.field).no_box = true];
}

//case class AllocateFailure(resp: SlotRequestResp) extends AllocateResponse with NetMsg
message AllocateFailure{
    option (scalapb.message).extends = "AllocateResponse";
    option (scalapb.message).extends = "runtime.common.NetMsg";
    bytes s = 1;
}

//case class AllocateError(err:  String) extends AllocateResponse with NetMsg
message AllocateError {
    option (scalapb.message).extends = "AllocateResponse";
    option (scalapb.message).extends = "runtime.common.NetMsg";
    string err = 1;
}

//case class TaskSlot(index: Int, profile: ArcProfile, state: SlotState = Free) extends NetMsg  {
//def newState(s: SlotState): TaskSlot = {
//this.copy(state = s)
//}
//}
message TaskSlot {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    int32 index = 1;
    ArcProfile profile = 2 [(scalapb.field).no_box = true]; // Not Option[]
    SlotState state = 3 [(scalapb.field).no_box = true]; // Not Option[]
}

//case class Allocate(job: ArcJob, slots: Seq[TaskSlot]) extends NetMsg
message Allocate {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    ArcJob job = 1 [(scalapb.field).no_box = true]; // Not Option[]
    repeated TaskSlot slots = 2;
}

//case class ReleaseSlots(slotIndxes: Seq[Int]) extends NetMsg
message ReleaseSlots {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    repeated int32 slotIndexes = 1;
}

//case class SlotUpdate(slots: Seq[TaskSlot]) extends NetMsg
message SlotUpdate {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    repeated TaskSlot slots = 1;
}


// StateManager related

//case class StateManagerJob(appMasterRef: AppMasterRef) extends NetMsg
message StateManagerJob {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    ActorRefProto ref = 1 [(scalapb.field).no_box = true];
}

//case class StateMasterConn(stateMaster: ActorRef) extends NetMsg
message StateMasterConn {
    option (scalapb.message).extends = "runtime.common.NetMsg";
    ActorRefProto ref = 1 [(scalapb.field).no_box = true];
}

